@@ -29,7 +29,7 @@ package it.tidalwave.bluemarine2.downloader;
 
 import javax.annotation.Nonnull;
 import javax.annotation.concurrent.Immutable;
-import java.util.Arrays;
+import java.util.List;
 import java.util.HashSet;
 import java.util.Set;
 import java.net.URL;
@@ -59,7 +59,7 @@ public class DownloadRequest
     public DownloadRequest (final @Nonnull URL url, final @Nonnull Option ... options) 
       {
         this.url = url;
-        this.options = new HashSet<>(Arrays.asList(options));
+        this.options = new HashSet<>(List.of(options));
       }
     
     public boolean isOptionPresent (final @Nonnull Option option)
